# drive-gooder

./: .gitignore  LICENSE.txt  README.md  dockerRun.sh
.github/workflows/: build-deploy.yml
_infra/: main.tf
_infra/scripts/: dockerRun.sh  localTest.sh  pushDockerImageAWS.sh
_infrastructure/: github.tf  main.tf
_infrastructure/scripts/: deploy.sh  dockerRun.sh  pushDockerImageAWS.sh  (+1 more)
api/: .dockerignore  .env.example  Dockerfile  answer_question.py  app.py  chunk_text.py  nginx.conf  pyproject.toml  read_text.py  request_models.py  requirements.txt  sqlite_db  start.sh  summarize.py  tts.py  uwsgi.ini
api/backend/: .env.example  app.py  request_models.py
api/backend/data/: db.py  user.py
api/backend/dataloaders/: arxiv.py
api/backend/handlers/: answer_question.py  chunk_text.py  classify_question.py  find_keywords.py  read_text.py  summarize.py
api/backend/llm/: factory.py  hosted_openai_wrappers.py  local_coqui_wrappers.py  modal_coqui_wrappers.py
api/cloud/: .dockerignore  Base.Dockerfile  BaseImage.Dockerfile  Dockerfile  Final.Dockerfile  appUser.sh  appUserStart.sh  nginx.conf  start.sh  uwsgi.ini
api/handlers/: chunk_text.py  read_text.py  summarize.py
api/llm/: factory.py  hosted_openai_wrappers.py  openai_wrappers.py
diagrams/: arch-detailed.drawio
old_code/: README.md  pyproject.toml
old_code/frontendBuild/: asset-manifest.json  index.html
old_code/frontendBuild/static/js/: main.949b2987.js  main.949b2987.js.map
old_code/thumptumble/: custom_file_response.py  falcon_inference_entity.py  main.py  template.txt  voice_synthesis.py
old_code/thumptumble/unused/: falcon_inference_base.py  llama_inference.py
old_code/voice_models/LeeMay01/: config.json
web/: .env.development  package-lock.json  package.json
web/src/: App.tsx  (+4 more)
(+18 files in other folders)
