[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.10.*"
flask = "2.3.2"
flask-httpauth = "^4.8.0"
uwsgi = "2.0.21"
python-dotenv = "^1.0.0"
marshmallow = "^3.20.1"
langchain = "0.0.247"
openai = "0.27.8"
tts = "0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.app:start"
