[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.10.*"
flask = "2.3.2"
flask-httpauth = "^4.8.0"
uwsgi = "2.0.23"
python-dotenv = "^1.0.0"
marshmallow = "^3.20.1"
langchain = "0.0.247"
openai = "0.27.8"
tts = "0.14.0"
tiktoken = "^0.4.0"
flask-cors = "^4.0.0"
oauthlib = "^3.2.2"
pyopenssl = "^24.0.0"
requests = "^2.31.0"
flask-login = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.app:app.run(port=5003)"
